第37轮扩写：40篇文档大规模深化（数据采集/HAProxy/RocketMQ/Pulsar/Debezium/OpenTelemetry/Nginx/Prometheus/Kafka/etcd/MongoDB/连接池/JVM/API网关/HDFS/Spark/Zabbix等）